force-app/main/default/objects/Facility_Schedule__c/fields/Account_Project__c.field-meta.xml
<CustomField>
    <fullName>Account_Project__c</fullName>
    <formula>Site__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account - Project</label>
    <type>Text</type>
</CustomField>