force-app/main/default/objects/Facility_Schedule__c/fields/Allow_Export_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Allow_Export_Buffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Export Buffer</label>
    <type>Checkbox</type>
</CustomField>