force-app/main/default/objects/Facility_Schedule__c/fields/Applicable_for_Availability__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicable for Availability</label>
    <type>Checkbox</type>
</CustomField>