force-app/main/default/objects/Facility_Schedule__c/fields/Availability_Guarantee_LD_Rate_kWh__c.field-meta.xml
<CustomField>
    <fullName>Availability_Guarantee_LD_Rate_kWh__c</fullName>
    <label>Availability Guarantee LD Rate ($/kWh)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>