force-app/main/default/objects/Facility_Schedule__c/fields/Availability_Guarantee_Level__c.field-meta.xml
<CustomField>
    <fullName>Availability_Guarantee_Level__c</fullName>
    <defaultValue>0.90</defaultValue>
    <label>Availability Guarantee Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>