force-app/main/default/objects/Facility_Schedule__c/fields/Availability_Guarantee_Type__c.field-meta.xml
<CustomField>
    <fullName>Availability_Guarantee_Type__c</fullName>
    <label>Availability Guarantee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Uptime</fullName>
            </value>
            <value>
                <fullName>EAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>