force-app/main/default/objects/Facility_Schedule__c/fields/Beneficial_Use_Fee_Escalation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Use_Fee_Escalation_Percentage__c</fullName>
    <inlineHelpText>Kroger specific field</inlineHelpText>
    <label>Beneficial Use Fee Escalation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>