force-app/main/default/objects/Facility_Schedule__c/fields/Beneficial_Use_Fee_kW__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Use_Fee_kW__c</fullName>
    <inlineHelpText>Kroger specific field</inlineHelpText>
    <label>Beneficial Use Fee ($/kW)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>