force-app/main/default/objects/Facility_Schedule__c/fields/Cap_on_Performance_Guarantee_project__c.field-meta.xml
<CustomField>
    <fullName>Cap_on_Performance_Guarantee_project__c</fullName>
    <label>Cap on Performance Guarantee ($ project)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>