force-app/main/default/objects/Facility_Schedule__c/fields/Cap_on_Performance_Guarantee_unit__c.field-meta.xml
<CustomField>
    <fullName>Cap_on_Performance_Guarantee_unit__c</fullName>
    <label>Cap on Performance Guarantee($ per unit)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>