force-app/main/default/objects/Facility_Schedule__c/fields/Capacity_of_a_single_core_kW__c.field-meta.xml
<CustomField>
    <fullName>Capacity_of_a_single_core_kW__c</fullName>
    <inlineHelpText>This is 1/2 of project max capacity as listed in the contract addendum.</inlineHelpText>
    <label>Capacity of a single core (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>