force-app/main/default/objects/Facility_Schedule__c/fields/Contact_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Contact_Term_Years__c</fullName>
    <label>Contact Term (Years)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>