force-app/main/default/objects/Facility_Schedule__c/fields/Curtailment_Floor_kW__c.field-meta.xml
<CustomField>
    <fullName>Curtailment_Floor_kW__c</fullName>
    <defaultValue>38</defaultValue>
    <label>Curtailment Floor (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>