force-app/main/default/objects/Facility_Schedule__c/fields/Datasheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Datasheet_Name__c</fullName>
    <formula>Performance_Table__r.Datasheet_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datasheet Name</label>
    <type>Text</type>
</CustomField>