force-app/main/default/objects/Facility_Schedule__c/fields/Dispatch_cutoff_percentage_per_core__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_cutoff_percentage_per_core__c</fullName>
    <label>Dispatch cutoff percentage per core</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>