force-app/main/default/objects/Facility_Schedule__c/fields/E_ds__c.field-meta.xml
<CustomField>
    <fullName>E_ds__c</fullName>
    <formula>Performance_Table__r.E_ds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E_ds</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>