force-app/main/default/objects/Facility_Schedule__c/fields/ECC_Amount_Year_10_kWh__c.field-meta.xml
<CustomField>
    <fullName>ECC_Amount_Year_10_kWh__c</fullName>
    <formula>If(Contact_Term_Years__c&gt;9,ECC_Amount_Year_1__c * (( 1 + (ECC_Escalation_Rate_Percent__c )) ^ 10), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC Amount Year 10 ($/kWh)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>