force-app/main/default/objects/Facility_Schedule__c/fields/ECC_Amount_Year_1__c.field-meta.xml
<CustomField>
    <fullName>ECC_Amount_Year_1__c</fullName>
    <label>ECC Amount Year 1 ($/kWh)</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>