force-app/main/default/objects/Facility_Schedule__c/fields/ECC_Escalation_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>ECC_Escalation_Rate_Percent__c</fullName>
    <label>ECC Escalation Rate Percent</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>