force-app/main/default/objects/Facility_Schedule__c/fields/Efficiency_Guarantee_Level_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Guarantee_Level_Percentage__c</fullName>
    <defaultValue>0.90</defaultValue>
    <label>Efficiency Guarantee Level Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>