force-app/main/default/objects/Facility_Schedule__c/fields/Electric_tariff_pre_LGen__c.field-meta.xml
<CustomField>
    <fullName>Electric_tariff_pre_LGen__c</fullName>
    <label>Electric tariff pre-LGen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>