force-app/main/default/objects/Facility_Schedule__c/fields/Facility_Nameplate_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Facility_Nameplate_Capacity_kW__c</fullName>
    <label>Facility Nameplate Capacity (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>