force-app/main/default/objects/Facility_Schedule__c/fields/Facility_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_Schedule_ID__c</fullName>
    <label>Facility Schedule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>