force-app/main/default/objects/Facility_Schedule__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Biogas</fullName>
            </value>
            <value>
                <fullName>H2-NG Blend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>