force-app/main/default/objects/Facility_Schedule__c/fields/Gas_bill_costs_per_month_of_the_year__c.field-meta.xml
<CustomField>
    <fullName>Gas_bill_costs_per_month_of_the_year__c</fullName>
    <label>Gas bill costs per month of the year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>