force-app/main/default/objects/Facility_Schedule__c/fields/Gas_Commodity_rate_escalation_rate__c.field-meta.xml
<CustomField>
    <fullName>Gas_Commodity_rate_escalation_rate__c</fullName>
    <label>Gas Commodity rate escalation rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>