force-app/main/default/objects/Facility_Schedule__c/fields/Gas_Commodity_rate_Year_10__c.field-meta.xml
<CustomField>
    <fullName>Gas_Commodity_rate_Year_10__c</fullName>
    <label>Gas Commodity rate ($) Year 10</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>