force-app/main/default/objects/Facility_Schedule__c/fields/Gas_Commodity_rate_Year_12__c.field-meta.xml
<CustomField>
    <fullName>Gas_Commodity_rate_Year_12__c</fullName>
    <formula>Gas_Commodity_rate_Year_10__c  * (( 1 + (  Gas_Commodity_rate_escalation_rate__c  )) ^ 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gas Commodity rate ($) Year 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>