force-app/main/default/objects/Facility_Schedule__c/fields/Gas_Cost_MMBtu__c.field-meta.xml
<CustomField>
    <fullName>Gas_Cost_MMBtu__c</fullName>
    <label>Gas Cost ($/MMBtu)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>