force-app/main/default/objects/Facility_Schedule__c/fields/Gas_D_T_escalation_rate__c.field-meta.xml
<CustomField>
    <fullName>Gas_D_T_escalation_rate__c</fullName>
    <label>Gas D&amp;T escalation rate</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>