force-app/main/default/objects/Facility_Schedule__c/fields/Gas_D_T_rates__c.field-meta.xml
<CustomField>
    <fullName>Gas_D_T_rates__c</fullName>
    <label>Gas D&amp;T rates</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>