force-app/main/default/objects/Facility_Schedule__c/fields/Gas_Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Gas_Rate_Schedule__c</fullName>
    <label>Current Customer Gas Rate Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>