force-app/main/default/objects/Facility_Schedule__c/fields/Genability_master_tariff_ID_pre_LGen__c.field-meta.xml
<CustomField>
    <fullName>Genability_master_tariff_ID_pre_LGen__c</fullName>
    <label>Genability master tariff ID pre-LGen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>