force-app/main/default/objects/Facility_Schedule__c/fields/Guaranteed_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Capacity_kW__c</fullName>
    <label>Guaranteed Capacity (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>