force-app/main/default/objects/Facility_Schedule__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <displayFormat>FS-{0}</displayFormat>
    <label>ID Number</label>
    <type>AutoNumber</type>
</CustomField>