force-app/main/default/objects/Facility_Schedule__c/fields/Initial_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Approval_Date__c</fullName>
    <label>Initial Approval Date</label>
    <type>Date</type>
</CustomField>