force-app/main/default/objects/Facility_Schedule__c/fields/Latest_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Approval_Date__c</fullName>
    <label>Latest Approval Date</label>
    <type>Date</type>
</CustomField>