force-app/main/default/objects/Facility_Schedule__c/fields/LHV_HHV_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>LHV_HHV_Conversion_Factor__c</fullName>
    <label>LHV/HHV Conversion Factor</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>