force-app/main/default/objects/Facility_Schedule__c/fields/LHV_HHV_Conversion_Factor_formula__c.field-meta.xml
<CustomField>
    <fullName>LHV_HHV_Conversion_Factor_formula__c</fullName>
    <formula>CASE(
    TEXT(Fuel_Type__c),
    &quot;Natural Gas&quot;, 1.11,
    &quot;Hydrogen&quot;, 1.18,
    &quot;Propane&quot;, 1.09,
    &quot;Biogas&quot;, 1.11,
    &quot;H2-NG blend&quot;, 1.11,
    0.00
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LHV/HHV Conversion Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>