force-app/main/default/objects/Facility_Schedule__c/fields/Load_Serving_Entity_LSE_ID__c.field-meta.xml
<CustomField>
    <fullName>Load_Serving_Entity_LSE_ID__c</fullName>
    <label>Genability Load Serving Entity (LSE) ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>