force-app/main/default/objects/Facility_Schedule__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <label>Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>