force-app/main/default/objects/Facility_Schedule__c/fields/Meter_type__c.field-meta.xml
<CustomField>
    <fullName>Meter_type__c</fullName>
    <label>Meter type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>