force-app/main/default/objects/Facility_Schedule__c/fields/Modeled_Avoided_Electric_Utility_Rate__c.field-meta.xml
<CustomField>
    <fullName>Modeled_Avoided_Electric_Utility_Rate__c</fullName>
    <label>Modeled Avoided Electric Utility Rate($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>