force-app/main/default/objects/Facility_Schedule__c/fields/Modeled_electric_tariff_name_pre_LGen__c.field-meta.xml
<CustomField>
    <fullName>Modeled_electric_tariff_name_pre_LGen__c</fullName>
    <label>Modeled electric tariff name pre-LGen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>