force-app/main/default/objects/Facility_Schedule__c/fields/Modeling_Title__c.field-meta.xml
<CustomField>
    <fullName>Modeling_Title__c</fullName>
    <formula>Site__r.Opportunity__r.Name&amp;&quot; - &quot;&amp;Name&amp;&quot; - &quot;&amp;TEXT(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modeling Title</label>
    <type>Text</type>
</CustomField>