force-app/main/default/objects/Facility_Schedule__c/fields/MSE_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>MSE_Site_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSE Site Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>