force-app/main/default/objects/Facility_Schedule__c/fields/Nameplate_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Nameplate_Efficiency__c</fullName>
    <label>Nameplate Efficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>