force-app/main/default/objects/Facility_Schedule__c/fields/O_M_Cost_run_hour__c.field-meta.xml
<CustomField>
    <fullName>O_M_Cost_run_hour__c</fullName>
    <label>O&amp;M Cost ($/run-hour)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>