force-app/main/default/objects/Facility_Schedule__c/fields/O_M_Escalator_year__c.field-meta.xml
<CustomField>
    <fullName>O_M_Escalator_year__c</fullName>
    <label>O&amp;M Escalator (%/year)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>