force-app/main/default/objects/Facility_Schedule__c/fields/O_M_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>O_M_Service_Charge__c</fullName>
    <label>O&amp;M Service Charge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>