force-app/main/default/objects/Facility_Schedule__c/fields/O_M_Service_Charge_escalation_rate__c.field-meta.xml
<CustomField>
    <fullName>O_M_Service_Charge_escalation_rate__c</fullName>
    <defaultValue>0.025</defaultValue>
    <label>O&amp;M Service Charge escalation rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>