force-app/main/default/objects/Facility_Schedule__c/fields/Performance_Table__c.field-meta.xml
<CustomField>
    <fullName>Performance_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Table</label>
    <referenceTo>Performance_Table__c</referenceTo>
    <relationshipName>Meter_Guarantees</relationshipName>
    <type>Lookup</type>
</CustomField>