force-app/main/default/objects/Facility_Schedule__c/fields/Performance_Table_URL__c.field-meta.xml
<CustomField>
    <fullName>Performance_Table_URL__c</fullName>
    <formula>Performance_Table__r.Table_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Table URL</label>
    <type>Text</type>
</CustomField>