force-app/main/default/objects/Facility_Schedule__c/fields/Pre_LGen_Rate_Criteria_RC_2__c.field-meta.xml
<CustomField>
    <fullName>Pre_LGen_Rate_Criteria_RC_2__c</fullName>
    <label>Pre-LGen Rate Criteria (RC) 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>