force-app/main/default/objects/Facility_Schedule__c/fields/Pre_LGen_RC_Value_10__c.field-meta.xml
<CustomField>
    <fullName>Pre_LGen_RC_Value_10__c</fullName>
    <label>Pre-LGen RC Value 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>