force-app/main/default/objects/Facility_Schedule__c/fields/Pre_MSE_Master_Tariff_ID__c.field-meta.xml
<CustomField>
    <fullName>Pre_MSE_Master_Tariff_ID__c</fullName>
    <label>Pre-MSE Master Tariff ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>