force-app/main/default/objects/Facility_Schedule__c/fields/Production_Guarantee_LD_Rate_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Production_Guarantee_LD_Rate_Escalation__c</fullName>
    <label>Production Guarantee LD Escalation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>