force-app/main/default/objects/Facility_Schedule__c/fields/Production_Guarantee_LD_Rate_kWh__c.field-meta.xml
<CustomField>
    <fullName>Production_Guarantee_LD_Rate_kWh__c</fullName>
    <label>Production Guarantee LD Rate ($/kWh)</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>