force-app/main/default/objects/Facility_Schedule__c/fields/Production_Guarantee_level_percentage__c.field-meta.xml
<CustomField>
    <fullName>Production_Guarantee_level_percentage__c</fullName>
    <defaultValue>0.90</defaultValue>
    <label>Production Guarantee level percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>