force-app/main/default/objects/Facility_Schedule__c/fields/Project_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_SFDC_ID__c</fullName>
    <formula>Site__r.Site_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project SFDC ID</label>
    <type>Text</type>
</CustomField>