force-app/main/default/objects/Facility_Schedule__c/fields/Project_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Term_End_Date__c</fullName>
    <label>Project Term End Date</label>
    <type>Date</type>
</CustomField>