force-app/main/default/objects/Facility_Schedule__c/fields/Reporting_Frequency_Months_yr__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Frequency_Months_yr__c</fullName>
    <label>Reporting Frequency (Months/yr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>