force-app/main/default/objects/Facility_Schedule__c/fields/Servable_Energy_Floor__c.field-meta.xml
<CustomField>
    <fullName>Servable_Energy_Floor__c</fullName>
    <label>Servable Energy Floor (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>