force-app/main/default/objects/Facility_Schedule__c/fields/Servable_Energy_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Servable_Energy_Rate_Percent__c</fullName>
    <defaultValue>0.80</defaultValue>
    <label>Servable Energy Rate Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>