force-app/main/default/objects/Facility_Schedule__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Project</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipName>Utility_Meters</relationshipName>
    <type>Lookup</type>
</CustomField>