force-app/main/default/objects/Facility_Schedule__c/fields/Standard_Efficiency_at_15C_and_sea_level__c.field-meta.xml
<CustomField>
    <fullName>Standard_Efficiency_at_15C_and_sea_level__c</fullName>
    <defaultValue>0.43</defaultValue>
    <label>Standard Efficiency at 15C and sea level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>