force-app/main/default/objects/Facility_Schedule__c/fields/Temperature_Offset__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Offset__c</fullName>
    <label>Temperature Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>