force-app/main/default/objects/Facility_Schedule__c/fields/Tracking_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Rate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Tracking Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>