force-app/main/default/objects/Facility_Schedule__c/fields/Utility_User_s_Tax_Gas__c.field-meta.xml
<CustomField>
    <fullName>Utility_User_s_Tax_Gas__c</fullName>
    <label>Utility User&apos;s Tax (Gas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>