force-app/main/default/objects/Facility_Schedule__c/fields/UtilityAPI_authorization_UID__c.field-meta.xml
<CustomField>
    <fullName>UtilityAPI_authorization_UID__c</fullName>
    <label>UtilityAPI authorization UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>