force-app/main/default/objects/Facility_Schedule__c/fields/Year_11_Contract_Gas_Cost_MMBtu__c.field-meta.xml
<CustomField>
    <fullName>Year_11_Contract_Gas_Cost_MMBtu__c</fullName>
    <label>Year 11 Contract Gas Cost ($/MMBtu)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>