force-app/main/default/objects/Facility_Schedule__c/fields/Year_11_Servable_Energy_Floor_kWh__c.field-meta.xml
<CustomField>
    <fullName>Year_11_Servable_Energy_Floor_kWh__c</fullName>
    <label>Year 11 Servable Energy Floor ($/kWh)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>