force-app/main/default/objects/Facility_Schedule__c/listViews/All_Meters.listView-meta.xml
<ListView>
    <fullName>All_Meters</fullName>
    <columns>NAME</columns>
    <columns>Facility_Schedule_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Facility Schedules</label>
</ListView>